# heat

./: .gitignore  README.md  childexposure.html  heatwaves.html  index.html  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: style-checks.yaml
assets/js/: children_exposure_map.js  dropdown.js  heatwave_indicator_map.js
assets/styles/: global.css  reset.css
code/: child_population_high_res.ipynb  copy_data_from_service_acount.ipynb  extreme_exposure_high_res.ipynb  heatwaves_indicators_calc_multi_year_product_v1_back.ipynb  hwi_analysis_1960_2024.ipynb  hwi_analysis_build_vrt_1960_2024.ipynb  hwi_resample.ipynb  hwi_summary_country.ipynb  read.me  read.me.txt  readme.md
data/: 10degree_selected_tiles.csv  UNICEF Programme and Reporting_March2022.xlsx
docs/: heatwave_analysis_slides_07032024.pptx
geospatial/: .flake8  create_geojson.py  optimize_rasters.py  pyproject.toml  utils.py
heatwaves_app/Examples/: color-scale.html  geojson.html  heatwaves.html
input/: child_population_geojson.geojson
js/: dropdown.js
output/statistics/: 2020-2024 Children Exposure to Heatwaves.xlsx
styles/: childexposure.css  climate.css  dropdown.css  fonts.css  main.css  reset.css
visualization/: childexposure.html  heatwaves.html
